# spin-trigger-amqp

./: .gitignore  Cargo.toml  Makefile  README.md  spin-amqp.wit  spin-pluginify.toml  trigger-amqp.json  trigger-messaging.json
.github/workflows/: build.yaml
examples/amqp-rust/: Cargo.toml  definitions.json  spin.toml  start-rabbitmq.sh
examples/amqp-rust/src/: lib.rs
sdk/rust/: Cargo.toml
sdk/rust/macro/: Cargo.toml
sdk/rust/macro/src/: lib.rs
sdk/rust/src/: lib.rs
src/: lib.rs  main.rs
