[package]
name = "spin-amqp-macro"
version = { workspace = true }
edition = { workspace = true }
include = ["../../../spin-amqp.wit"]

[lib]
name = "spin_amqp_macro"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
wit-bindgen = { workspace = true }